--- a/class08.qmd
+++ b/class08.qmd
@@ -602,6 +602,8 @@ Are our conclusions meaningfully different if we do (or do not) assume Normal po
 - Preserves all changes in your R work (factors, etc.)
 
 ```{r}
+#| echo: true
+
 write_rds(dm1000, "c08/data/dm_1000.Rds")
 ```
 
